# Knowly

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  env.example
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0703de912a0b_initial_schema.py  b2e7c1a4f9d3_add_messages_receiver_read_index.py
backend/app/: config.py  main.py  wait_for_db.py
backend/app/db/: session.py
backend/app/models/: __init__.py  ai.py  answer.py  attachment.py  comment.py  friendship.py  message.py  notification.py  question.py  session.py  user.py  vote.py
backend/app/routers/: ai.py  friends.py  health.py  messages.py  moderation.py  users.py
backend/app/schemas/: common.py  user.py
backend/app/services/: admin.py  auth.py  content.py  files.py  friends  friends.py  llm.py  mentions.py  moderation.py  notifications.py  security.py  session.py
backend/tests/: conftest.py
backend/tests/lane_a/: test_a01_sessions.py  test_a02_registration.py
backend/tests/lane_b/: test_b01_content_seam.py
backend/tests/lane_c/: test_c01_notification_seam.py  test_c02_inbox_api.py
backend/tests/lane_d/: test_d01_llm_client.py
backend/tests/milestones/: test_m1_real_auth.py  test_m2_content_seam.py  test_m3_notifications.py  test_m4_moderation.py  test_m5_friendship.py  test_m6_files.py  test_m7_notification_inbox.py  test_m8_ai_answer.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
nginx/: nginx.conf
scripts/: check-env.sh  (+1 more)
(+44 files in other folders)
